# Daemonlogger

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.am.common  Makefile.in  README  config.h.in  configure  configure.in  daemonlogger.c  daemonlogger.spec  daemonlogger.spec.sig  dotfiles.tgz
